--- a/Client/src/app/customers/customers.component.html
+++ b/Client/src/app/customers/customers.component.html
@@ -1,5 +1,5 @@
 <div class="customers view indent">
-    <div class="container">
+    <div class="container" style="background-image: src(vintage.jpg)">
       <header>
         <h3>
           <span class="glyphicon glyphicon-user"></span>
