--- a/Client/src/app/customers/login.component.html
+++ b/Client/src/app/customers/login.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="login" style="background-image: src(vintage.jpg)">
   <div class="row grid-container">
     <div class="col-md-10">
       <h1>Create Login: </h1>
@@ -19,7 +19,7 @@
 		<button class="button" type="submit">Login</button>
 		</form>
       <div class="col-md-4">
-        <a class="btn btn-default" [routerLink]="['/createlogin']">Login</a>
+        <a class="btn btn-default" [routerLink]="['/createlogin']">Create Login Page</a>
       </div>
     </div>
   </div>
