--- a/Client/src/app/shared/pagination/pagination.component.css
+++ b/Client/src/app/shared/pagination/pagination.component.css
@@ -1,8 +1,8 @@
-.pagination>.active>a, .pagination>.active>a:focus, .pagination>.active>a:hover, .pagination>.active>span, .pagination>.active>span:focus, .pagination>.active>span:hover {
-  background-color: #027FF4;
-  border-color: #027FF4;
+.pagination > .active > a, .pagination > .active > a:focus, .pagination > .active > a:hover, .pagination > .active > span, .pagination > .active > span:focus, .pagination > .active > span:hover {
+  background-color: #4800ff;
+  border-color: #00ffff;
 }
 
 .pagination a {
-    cursor: pointer;
+  cursor: pointer;
 }
