--- a/Client/src/app/customers/customers.component.html
+++ b/Client/src/app/customers/customers.component.html
@@ -3,7 +3,7 @@
       <header>
         <h3>
           <span class="glyphicon glyphicon-user"></span>
-          {{ title }}
+          {{ currentUser }}
         </h3>
         <a [routerLink]="['/login']"> Login Page </a>
       </header>
