--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
-<main class="container">
-    <app-component>
-        Loading...
-    </app-component>
-    <br /><br />
+<main class="container" style="background-color:#E6E6FA">
+  <app-component>
+    Loading...
+  </app-component>
+  <br /><br />
 </main>
