--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,8 +1,8 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <base href="/">
-    <title>Angular TypeScript App</title>
+    <title>Create Your Story</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Angular 2">
@@ -12,19 +12,19 @@
     <link href="assets/styles/styles.css" rel="stylesheet" />
     <link href="styles.css" rel="stylesheet" />
 </head>
-<body>
+<body style="background-color:#E6E6FA">
     <header class="navbar navbar-inner navbar-fixed-top">
         <nav class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <img src="assets/images/people.png" alt="logo">
-                <a href="/customers" class="app-title">Customer Manager</a>
-            </div>
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <img src="assets/images/ic_launcher.png" alt="logo">
+            <a href="/customers" class="app-title">Create Your Story</a>
+          </div>
         </nav>
     </header>
 
