--- a/Client/src/app/customers/customer-edit.component.html
+++ b/Client/src/app/customers/customer-edit.component.html
@@ -9,7 +9,7 @@
   <form (ngSubmit)="submit()" #customerForm="ngForm" class="editForm" novalidate>
     <div class="form-group">
       <label>Entry</label>
-      <input type="text" class="form-control" name="entry" [(ngModel)]="customer.entry" #firstName="ngModel" required>
+      <input type="text" cols="40" rows="5" style="width:200px; height:50px;" class="form-control" name="entry" [(ngModel)]="customer.entry" #firstName="ngModel" required>
       <div class="alert alert-danger">Entry is required</div>
     </div>
     <div class="form-group">
