--- a/Client/src/app/customers/customer-edit-reactive.component.html
+++ b/Client/src/app/customers/customer-edit-reactive.component.html
@@ -2,7 +2,7 @@
   <header>
       <h3>
           <span class="glyphicon glyphicon-user"></span>
-          {{ customer.entry }} {{ customer.date }}
+          {{ customer.entry }} {{ customer.mydate }}
       </h3>
   </header>
   <br />
