--- a/Client/src/app/customers/customers-grid.component.html
+++ b/Client/src/app/customers/customers-grid.component.html
@@ -16,7 +16,7 @@
               <td>
               </td>
               <td><a [routerLink]="['/customers',customer.id]">{{ customer.entry | capitalize }}</a></td>
-              <td>{{ customer.date | capitalize }}</td>
+              <td>{{ customer.mydate | capitalize }}</td>
             </tr>
             <tr *ngIf="!customers.length">
               <td>&nbsp;</td>
